# danielparks-template.rs

./: .gitignore  .pre-commit-config.yaml.liquid  Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml  deny.toml  release.sh  template.toml  test-automated.zsh  test-template.sh  test-template.zsh
.github/: dependabot.yml.liquid
.github/workflows/: dependabot-prek.yaml.liquid  pr-checks.yaml.liquid  prek-auto-update.yaml.liquid  release.yaml.liquid
benches/: general.rs
src/: lib.rs  logging.rs  main.rs  params.rs
{{project_name}}/: Cargo.toml  README.md
{{project_name}}/benches/: general.rs
{{project_name}}/src/: lib.rs
