[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Daniel Parks <oss-{{project-name}}@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/{{project-name}}"
repository = "https://github.com/danielparks/{{project-name}}"
{% if crate_type == "bin" -%}
documentation = "https://github.com/danielparks/{{project-name}}"
{% endif -%}
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2021"

{% if crate_type == "bin" -%}
[dependencies]
anyhow = "1.0.44"
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.14"
simplelog = "0.12.0"
smol = "1.2.5"
{% endif -%}
{% if crate_type == "lib" -%}
[dev-dependencies]
assert2 = "0.3.7"
{% endif -%}
