[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Daniel Parks <oss-{{project-name}}@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/{{project-name}}"
repository = "https://github.com/danielparks/{{project-name}}"
{% if crate_type == "bin" -%}
documentation = "https://github.com/danielparks/{{project-name}}"
{% endif -%}
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

{% if crate_type == "bin" -%}
[dependencies]
anyhow = "1.0.44"
clap = { version = "4.0.32", features = ["derive"] }
is-terminal = "0.4.7"
log = "0.4.14"
simplelog = "0.12.0"
termcolor = "1.1.3"
smol = "1.2.5"
{% endif -%}
{% if crate_type == "lib" -%}
[dev-dependencies]
assert2 = "0.3.7"
criterion = "0.5.1"

[[bench]]
name = "general"
harness = false
{% endif -%}
