[package]
name = "{{project_name}}"
version = "0.1.0"
authors = ["{{author_name}} <{{author_email}}>"]
description = "Project description"
license = "MIT OR Apache-2.0"
edition = "2018"

[build-dependencies]

[dependencies]

[dev-dependencies]
assertify = { path = "/Users/daniel/projects/assertify" }
